# sporty-tech-task

./: .gitignore  LICENSE  README.md  conftest.py  index.html  pyproject.toml
data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 274edafc3745968b.html  b0150b0f399c910f.html
data/test-cases/: 138d083cef133159.json  1e15ba0d22e03183.json  20e33e51547336dc.json  21a9b5eb44d7710b.json  25d895c81b4c0940.json  2c16c11ddb63a833.json  3e8e44b6b52caac5.json  4ac2626743418a7f.json  5454e4102d188e2f.json  598483b5e7db101e.json  67cefcb23a53ca64.json  7538ed18f7b49013.json  75b0bcba2c6bfb01.json  8c9b4541531ad996.json  985038513cee9a01.json  a1179185ba0efa1d.json  a318af30e8ebacd4.json  b405e32992f74096.json  b9b79832e2c655c.json  c0734f3eda33e90e.json  c24e5a08cee13d41.json  c30a1836548149f7.json  d3cdce49b7a0f967.json  d66b98bf2c5f4103.json  e81dd01cadb450a5.json  ef62979fbe1d9a84.json
docs/: bug_reports.md  test_plan.md
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
tests/api/: test_place_bet.py
tests/ui/: test_place_bet_e2e.py
widgets/: duration.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
